精选午餐及销量排行榜接口及逻辑写入

--- a/app/src/main/res/layout/activity_model_crecyclerview.xml
+++ b/app/src/main/res/layout/activity_model_crecyclerview.xml
@@ -45,8 +45,8 @@
         android:textSize="18sp" />
 
 
-    <com.huaxiafinance.www.crecyclerview.crecyclerView.CRecyclerView
-        android:id="@+id/crecyclerview"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
         android:layout_below="@+id/toolbar_title"
         android:layout_marginTop="15dp"
         android:layout_marginLeft="7dp"
