--- a/app/src/main/res/layout/item_food_chart.xml
+++ b/app/src/main/res/layout/item_food_chart.xml
@@ -17,13 +17,14 @@
 
     <ImageView
         android:id="@+id/iv_icon"
-        android:layout_width="35dp"
-        android:layout_height="35dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:layout_alignParentRight="true"
         android:layout_marginTop="-18dp"
         android:layout_marginRight="12dp"
         android:layout_below="@+id/tv_image"
-        android:background="#000000"/>
+        android:padding="2.5dp"
+        android:background="@drawable/bg_white_round5"/>
 
     <TextView
         android:id="@+id/tv_money"
