--- a/app/src/main/res/layout/item_home_3.xml
+++ b/app/src/main/res/layout/item_home_3.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <com.bee.user.widget.MyGridView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/gridview"
         android:layout_margin="5dp"
         android:layout_width="match_parent"
