--- a/app/src/main/res/layout/item_home_gridview2.xml
+++ b/app/src/main/res/layout/item_home_gridview2.xml
@@ -5,7 +5,7 @@
     android:paddingRight="10dp"
     android:paddingBottom="15dp"
     android:paddingTop="15dp"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/tv_title"
@@ -33,7 +33,7 @@
         android:layout_width="match_parent"
         android:layout_height="90dp"
         android:layout_below="@+id/tv_title"
-        android:scaleType="fitXY"
+        android:scaleType="centerCrop"
         android:layout_marginTop="10dp"
         android:src="@drawable/food2"/>
 
