--- a/app/src/main/res/layout/activity_order_comment_detail.xml
+++ b/app/src/main/res/layout/activity_order_comment_detail.xml
@@ -112,6 +112,7 @@
                     android:maxWidth="20dp"
                     android:maxHeight="20dp"
                     android:rating="4"
+                    android:isIndicator="true"
                     app:layout_constraintBottom_toBottomOf="@+id/ratin_text11"
                     app:layout_constraintLeft_toRightOf="@+id/ratin_text11"
                     app:layout_constraintTop_toTopOf="@id/ratin_text11"
@@ -136,6 +137,7 @@
                     android:layout_height="40dp"
                     android:maxWidth="20dp"
                     android:maxHeight="20dp"
+                    android:isIndicator="true"
                     app:layout_constraintBottom_toBottomOf="@+id/ratin_text22"
                     app:layout_constraintLeft_toRightOf="@+id/ratin_text22"
                     app:layout_constraintTop_toTopOf="@id/ratin_text22"
@@ -161,6 +163,7 @@
                     android:layout_height="40dp"
                     android:maxWidth="20dp"
                     android:maxHeight="20dp"
+                    android:isIndicator="true"
                     app:layout_constraintBottom_toBottomOf="@+id/ratin_text33"
                     app:layout_constraintLeft_toRightOf="@+id/ratin_text33"
                     app:layout_constraintTop_toTopOf="@id/ratin_text33"
