--- a/app/src/main/res/layout/dialog_store_bottom_selected.xml
+++ b/app/src/main/res/layout/dialog_store_bottom_selected.xml
@@ -31,8 +31,7 @@
             android:textColor="@color/color_7C7877"
             android:textSize="12sp" />
 
-
-        <androidx.recyclerview.widget.RecyclerView
+        <com.bee.user.widget.DragRecyclerView
             android:id="@+id/recyclerview"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -40,7 +39,7 @@
             android:layout_marginTop="4dp"
             android:paddingLeft="5dp"
             android:paddingRight="5dp"
-            android:paddingBottom="44dp" />
+            android:paddingBottom="55dp" />
 
 
     </RelativeLayout>
