--- a/app/src/main/res/layout/item_store2.xml
+++ b/app/src/main/res/layout/item_store2.xml
@@ -34,6 +34,7 @@
         android:layout_marginLeft="10dp"
         android:layout_marginTop="4dp"
         android:rating="4.8"
+        android:isIndicator="true"
         app:mrb_progressTint="@color/color_FF6100"
         app:mrb_secondaryProgressTint="@color/color_E9E9E9"
         android:layout_below="@+id/tv_title"
@@ -46,7 +47,7 @@
         android:text=""
         android:textSize="12sp"
         android:layout_marginLeft="2dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginTop="2dp"
         android:textColor="@color/color_FF5050"
         android:layout_below="@+id/tv_title"
         android:layout_toRightOf="@+id/mrb"/>
@@ -89,4 +90,16 @@
         android:layout_toRightOf="@+id/tv_time"/>
 
 
+    <TextView
+        android:id="@+id/tv_to_store"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:layout_marginRight="10dp"
+        android:background="@drawable/btn_stroke_yellow"
+        android:layout_width="70dp"
+        android:layout_height="25dp"
+        android:textSize="12sp"
+        android:gravity="center"
+        android:textColor="@color/FF6200"
+        android:text="进店逛逛"/>
 </RelativeLayout>
