--- a/app/src/main/res/layout/fragment_store_comment.xml
+++ b/app/src/main/res/layout/fragment_store_comment.xml
@@ -22,7 +22,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
-                android:text="4.8"
+                android:text=""
                 android:textColor="@color/color_FF5050"
                 android:textSize="32sp"
                 app:layout_constraintLeft_toLeftOf="parent"
@@ -73,7 +73,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="2dp"
                 android:layout_marginRight="32dp"
-                android:text="99%"
+                android:text=""
                 android:textColor="@color/color_3B3838"
                 android:textSize="15sp"
                 android:textStyle="bold"
@@ -99,7 +99,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="2dp"
                 android:layout_marginRight="32dp"
-                android:text="4.9"
+                android:text=""
                 android:textColor="@color/color_3B3838"
                 android:textSize="15sp"
                 android:textStyle="bold"
@@ -126,7 +126,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="2dp"
                 android:layout_marginRight="32dp"
-                android:text="4.8"
+                android:text=""
                 android:textColor="@color/color_3B3838"
                 android:textSize="15sp"
                 android:textStyle="bold"
