--- a/app/src/main/res/layout/fragment_store_des.xml
+++ b/app/src/main/res/layout/fragment_store_des.xml
@@ -12,14 +12,12 @@
         android:paddingRight="10dp">
 
 
-        <ImageView
+        <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/image"
             android:layout_width="match_parent"
             android:layout_height="150dp"
-            android:background="@color/color_3B3838"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
-
 
         <TextView
             android:id="@+id/tv_pingpai"
@@ -29,6 +27,7 @@
             android:text="品牌介绍"
             android:textColor="@color/color_282626"
             android:textSize="16sp"
+            android:textStyle="bold"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/image" />
 
@@ -37,12 +36,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:text="“一点点奶茶品牌介绍，说起奶茶品牌,不少人都会想到一
-点点奶茶吧!一点点奶茶品牌创立于1994年,从起初仅仅是
-一种茶摊饮品,到现在成为了众人眼中的高端品牌,一点点
-奶茶...”"
+            android:text=""
             android:textColor="@color/color_282626"
-            android:textSize="16sp"
+            android:textSize="14sp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_pingpai" />
 
@@ -54,26 +50,16 @@
             android:text="企业资质"
             android:textColor="@color/color_282626"
             android:textSize="16sp"
+            android:textStyle="bold"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_pingpai_content" />
 
-        <ImageView
+        <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/iv_zizhi1"
-            android:layout_width="148dp"
+            android:layout_width="match_parent"
             android:layout_height="100dp"
             android:layout_marginTop="16dp"
-            android:scaleType="fitXY"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_zizhi" />
-
-        <ImageView
-            android:id="@+id/iv_zizhi2"
-            android:layout_width="148dp"
-            android:layout_height="100dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="16dp"
-            android:scaleType="fitXY"
-            app:layout_constraintLeft_toRightOf="@+id/iv_zizhi1"
             app:layout_constraintTop_toBottomOf="@+id/tv_zizhi" />
 
         <TextView
@@ -82,10 +68,11 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
             android:text="营业时间"
+            android:textStyle="bold"
             android:textColor="@color/color_282626"
             android:textSize="16sp"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/iv_zizhi2" />
+            app:layout_constraintTop_toBottomOf="@+id/iv_zizhi1" />
 
         <com.bee.user.widget.MyGridView
             android:id="@+id/gv_time"
