--- a/app/src/main/res/layout/item_home_banner.xml
+++ b/app/src/main/res/layout/item_home_banner.xml
@@ -10,5 +10,7 @@
         android:id="@+id/banner2"
         android:layout_width="match_parent"
         android:layout_height="110dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginStart="5dp"
         app:canLoop="true"/>
 </LinearLayout>
