--- a/app/src/main/res/layout/foot_chart.xml
+++ b/app/src/main/res/layout/foot_chart.xml
@@ -1,15 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
+
+    <com.bee.user.widget.ChartNoDataDrawerView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/ll_products_unAvalable"/>
 
     <ImageView
         android:id="@+id/imageview"
         android:layout_width="match_parent"
         android:layout_height="90dp"
         android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
         android:scaleType="fitXY"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"/>
-</FrameLayout>
+</LinearLayout>
