--- a/app/src/main/res/layout/fragment_chart_nodata.xml
+++ b/app/src/main/res/layout/fragment_chart_nodata.xml
@@ -93,6 +93,7 @@
             android:paddingBottom="10dp"
             android:layout_alignParentRight="true"
             android:text="全部清空"
+            android:visibility="gone"
             android:textColor="@color/color_3B3838"
             android:textSize="12sp" />
 
@@ -100,6 +101,7 @@
             android:id="@+id/cl_qujiesuan"
             android:layout_width="match_parent"
             android:layout_height="44dp"
+            android:visibility="gone"
             android:layout_alignParentBottom="true"
             android:background="@color/white"
             android:elevation="0dp">
