--- a/app/src/main/res/layout/item_chart_nodata_drawer.xml
+++ b/app/src/main/res/layout/item_chart_nodata_drawer.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content"
     android:layout_marginLeft="10dp"
     android:layout_marginRight="10dp"
-    android:visibility="gone"
+    android:visibility="visible"
     android:id="@+id/ll_drawer"
     android:background="@drawable/bg_round10dp_white"
     android:orientation="vertical">
@@ -35,5 +35,6 @@
         android:drawablePadding="6dp"
         android:gravity="center"
         android:text="收起"
+        android:visibility="gone"
         android:textColor="@color/color_282525" />
 </LinearLayout>
